--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,6 @@ examples/Untitled*.ipynb
 jupytergis/_version.py
 
 .yarn
+
+python/jupytergis_lab/jupytergis_lab/labextension/
+python/jupytergis_lab/jupytergis_lab/notebook/objects/_schema
