--- a/python/jupytergis_lab/.gitignore
+++ b/python/jupytergis_lab/.gitignore
@@ -1,3 +1,3 @@
-jupytercad_lab/labextension
-jupytercad_lab/_version.py
-jupytercad_lab/notebook/objects/_schema
+jupytergis_lab/labextension
+jupytergis_lab/_version.py
+jupytergis_lab/notebook/objects/_schema
