--- a/python/jupytergis/pyproject.toml
+++ b/python/jupytergis/pyproject.toml
@@ -19,9 +19,8 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-  "jupytergis_core>=2.0.0a0,<3",
-  "jupytergis_lab>=2.0.0a0,<3",
-  "jupytergis_app>=2.0.0a0,<3",
+  "jupytergis_core>=0.1.0,<1",
+  "jupytergis_lab>=0.1.0,<1",
 ]
 dynamic = ["version"]
 license = {file = "LICENSE"}
