--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ jupytergis/_version.py
 
 python/jupytergis_lab/jupytergis_lab/labextension/
 python/jupytergis_lab/jupytergis_lab/notebook/objects/_schema
+
+untitled*
