--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -217,7 +217,7 @@ jobs:
         working-directory: lite
         run: |
           set -eux
-          mkdir -p content && cp ../examples/test.jcad ./content
+          mkdir -p content && cp ../examples/test.jGIS ./content
           jupyter lite build --contents content --output-dir dist
 
       - name: Upload artifact
