--- a/lerna.json
+++ b/lerna.json
@@ -2,9 +2,5 @@
   "npmClient": "yarn",
   "version": "independent",
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "packages": [
-    "packages/*",
-    "python/jupytergis_core",
-    "python/jupytergis_lab"
-  ]
+  "packages": ["packages/*", "python/jupytergis_core", "python/jupytergis_lab"]
 }
