--- a/package.json
+++ b/package.json
@@ -59,18 +59,13 @@
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
     "copy-webpack-plugin": "^10.0.0",
-    "eslint": "8.36.0",
-    "eslint-config-prettier": "8.7.0",
-    "eslint-plugin-prettier": "5.0.1",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "lerna": "^7.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "rimraf": "^3.0.2",
-    "stylelint": "^15.10.1",
-    "stylelint-config-recommended": "^13.0.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-csstree-validator": "^3.0.0",
-    "stylelint-prettier": "^4.0.0",
     "typescript": "^5",
     "webpack": "^5.76.3"
   }
