--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -31,6 +31,7 @@
     "build:schema:py": "datamodel-codegen --input ./src/schema --output ../../python/jupytergis_lab/jupytergis_lab/notebook/objects/_schema --output-model-type pydantic_v2.BaseModel --input-file-type jsonschema",
     "build:prod": "jlpm run clean && jlpm build:schema && jlpm run build:lib",
     "build:lib": "tsc",
+    "build:dev": "jlpm run build",
     "clean": "rimraf tsconfig.tsbuildinfo",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:all": "jlpm run clean:lib",
