--- a/python/jupytergis_core/package.json
+++ b/python/jupytergis_core/package.json
@@ -31,6 +31,7 @@
     "build:labextension:dev": "jupyter labextension build --development True .",
     "build:lib": "tsc --sourceMap",
     "build:lib:prod": "tsc",
+    "build:dev": "jlpm run build",
     "clean": "jlpm clean:lib",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:lintcache": "rimraf .eslintcache .stylelintcache",
