Add script dependecies to build action

--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -22,6 +22,9 @@ jobs:
             yarn=3
             pip
             jupyter-releaser
+            pillow
+            mercantile
+            xyzservices
 
       - name: Check Release
         uses: jupyter-server/jupyter_releaser/.github/actions/check-release@v2
