--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
             python=3.9
             jupyterlab=4
             yarn=3
+            pillow
+            mercantile
+            xyzservices
 
       - name: Setup pip cache
         uses: actions/cache@v2
