--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -3,3 +3,6 @@ datamodel-code-generator>=0.23.0
 hatchling>=1.5.0,<2
 jupyterlab>=4,<5
 pydantic==2.4.2
+pillow>=10
+mercantile>=1.2
+xyzservices>=2024.6.0
