Add raster layer gallery (#16)
* Add raster layer gallery

* Add layout browser to toolbar

* Create layer browser

* Add raster layer gallery

* Change thumbnail to use string

* Use real gallery instead of dummy data

* Add layer to map on click

* Add atrribution

* Add search icon

* Add display for added layers

* Rework JSON

* Create categories

* Use shared model as source of layers on map

* Start working on category tabs

* Fix up provider category css

* Category filter wip

* Filter by category

* Add more attributes to raste source json

* Add some attributes to source - wip

* Add new layers to layer tree

* Move layer browser css

* Make layer browser a plugin

* Add webpack-env types to clear ts error

* Move layer browser css

* Create thumbnails at build time and add build:dev option to skip it

* Fix build stuff

* Add script dependecies to build action

* Remove layer tree stuff

* Add some tests

* Small fixes

* Add remove/clear methods to registry

* Add script dependecies to requirements

* Fix tests

* Rename registry functions

* Remove raster layer gallery

* Make attribution optional

* Use models addLayer()

* Add some jsdoc

* CI test

* CI fix maybe

* Rework tests

* Resize grid for smaller windows

---------

Co-authored-by: Greg <gjmooney@asu.edu>

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "build": "lerna run build",
     "build:prod": "lerna run build:prod",
     "build:test": "lerna run build:test",
+    "build:dev": "lerna run build:dev",
     "bump:js:version": "lerna version --no-push --force-publish --no-git-tag-version --yes",
     "clean": "lerna run clean",
     "clean:all": "lerna run clean:all",
@@ -56,6 +57,7 @@
     "@jupyterlab/services": " ^7.0.0"
   },
   "devDependencies": {
+    "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
     "copy-webpack-plugin": "^10.0.0",
@@ -68,5 +70,10 @@
     "rimraf": "^3.0.2",
     "typescript": "^5",
     "webpack": "^5.76.3"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "latest"
   }
 }
