--- a/.gitignore
+++ b/.gitignore
@@ -129,5 +129,6 @@ jupytergis/_version.py
 
 python/jupytergis_lab/jupytergis_lab/labextension/
 python/jupytergis_lab/jupytergis_lab/notebook/objects/_schema
+packages/base/rasterlayer_gallery/*
 
 untitled*
