Command to validate and add geoJSON source

--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -60,7 +60,9 @@
     "@rjsf/core": "^4.2.0",
     "@types/d3-color": "^3.1.0",
     "@types/three": "^0.134.0",
+    "ajv": "^8.14.0",
     "d3-color": "^3.1.0",
+    "geojson-schema": "^1.0.5",
     "maplibre-gl": "^4.4.1",
     "react": "^18.0.1",
     "styled-components": "^5.3.6",
