--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,5 +37,8 @@ jobs:
         environment-name: jupytergis
         create-args: python=${{ matrix.python-version }}
 
+    - name: Install test packages
+      run: pip install pytest pytest-qgis dirty-equals
+
     - name: Run tests
       run: pytest --color=yes -v python/jupytergis_core/tests
