--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,4 +41,4 @@ jobs:
       run: pip install pytest pytest-qgis dirty-equals
 
     - name: Run tests
-      run: pytest --color=yes -v python/jupytergis_core/tests
+      run: QT_QPA_PLATFORM=offscreen pytest --color=yes -v python/jupytergis_core/tests
