--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.9",
+    "@jupyter/docprovider": "^2.0.0",
     "@jupyter/ydoc": "^1.0.0",
     "@jupyterlab/apputils": "^4.0.0",
     "@jupyterlab/coreutils": "^6.0.0",
