--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.9",
+    "@jupyter/docprovider": "^2.0.0",
     "@jupyter/ydoc": "^1.0.0",
     "@jupyterlab/apputils": "^4.0.0",
     "@jupyterlab/coreutils": "^6.0.0",
@@ -47,7 +48,7 @@
     "@jupyterlab/ui-components": "^4.0.0",
     "@lumino/coreutils": "^2.0.0",
     "@lumino/signaling": "^2.0.0",
-    "ajv": "8.14.0",
+    "ajv": "8.16.0",
     "json-schema-to-typescript": "^10.1.5",
     "yjs": "^13.5.40"
   },
