--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ jupytergis/_version.py
 
 .yarn
 
+python/jupytergis_qgis/jupytergis_qgis/labextension/
 python/jupytergis_lab/jupytergis_lab/labextension/
 python/jupytergis_lab/jupytergis_lab/notebook/objects/_schema
 packages/base/rasterlayer_gallery/*
