--- a/python/jupytergis_lab/pyproject.toml
+++ b/python/jupytergis_lab/pyproject.toml
@@ -23,6 +23,8 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
+  "mapbox-vector-tile",
+  "requests",
   "jupyter_server>=2.0.1,<3",
   "jupyter-ydoc>=2,<3",
   "jupyterlab>=4,<5",
