Add pmtiles and refactor url source

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "latest"
+    "@fortawesome/react-fontawesome": "latest",
+    "pmtiles": "^3.0.7"
   }
 }
