--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -56,6 +56,7 @@
     "@lumino/messaging": "^2.0.0",
     "@lumino/signaling": "^2.0.0",
     "@lumino/widgets": "^2.0.0",
+    "@mapbox/vector-tile": "^2.0.3",
     "@naisutech/react-tree": "^3.0.1",
     "@rjsf/core": "^4.2.0",
     "@types/d3-color": "^3.1.0",
@@ -64,6 +65,7 @@
     "d3-color": "^3.1.0",
     "geojson-schema": "^1.0.5",
     "maplibre-gl": "^4.4.1",
+    "pbf": "^4.0.1",
     "react": "^18.0.1",
     "styled-components": "^5.3.6",
     "three": "^0.135.0",
