--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -65,6 +65,7 @@
     "geojson-schema": "^1.0.5",
     "maplibre-gl": "^4.4.1",
     "react": "^18.0.1",
+    "shpjs": "^6.1.0",
     "styled-components": "^5.3.6",
     "three": "^0.135.0",
     "three-mesh-bvh": "^0.5.17",
