Update jupyterlite examples

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -242,7 +242,7 @@ jobs:
         working-directory: lite
         run: |
           set -eux
-          mkdir -p content && cp ../examples/test.jGIS ./content
+          mkdir -p content && cp ../examples/* ./content
           jupyter lite build --contents content --output-dir dist
 
       - name: Upload artifact
