--- a/python/jupytergis_qgis/pyproject.toml
+++ b/python/jupytergis_qgis/pyproject.toml
@@ -25,7 +25,8 @@ classifiers = [
 dependencies = [
   "jupyter_server>=2.0.1,<3",
   "jupyter-ydoc>=2,<3",
-  "jupyter-collaboration>=2,<3"
+  "jupyter-collaboration>=2,<3",
+  "jupytergis_lab"
 ]
 dynamic = ["version", "description", "authors", "urls", "keywords"]
 license = {file = "LICENSE"}
