--- a/.github/workflows/update_galata_references.yaml
+++ b/.github/workflows/update_galata_references.yaml
@@ -70,7 +70,7 @@ jobs:
           fi
 
       - name: Download extension package
-        uses: dawidd6/action-download-artifact@v2
+        uses: dawidd6/action-download-artifact@latest
         with:
           pr: ${{github.event.issue.number}}
           workflow: 'build.yml'
