--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -64,7 +64,7 @@
     "ajv": "^8.14.0",
     "d3-color": "^3.1.0",
     "geojson-schema": "^1.0.5",
-    "maplibre-gl": "^4.4.1",
+    "ol-pmtiles": "^0.5.0",
     "pbf": "^4.0.1",
     "react": "^18.0.1",
     "shpjs": "^6.1.0",
