--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -63,6 +63,7 @@
     "@types/three": "^0.134.0",
     "ajv": "^8.14.0",
     "d3-color": "^3.1.0",
+    "gdal3.js": "^2.8.1",
     "geojson-schema": "^1.0.5",
     "ol-pmtiles": "^0.5.0",
     "pbf": "^4.0.1",
