Some code cleaning

--- a/tsconfigbase.json
+++ b/tsconfigbase.json
@@ -9,8 +9,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "noEmitOnError": true,
-    "noImplicitAny": false,
-    "noUnusedLocals": false,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
     "preserveWatchOutput": true,
     "resolveJsonModule": true,
     "strict": true,
