--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -78,6 +78,7 @@
     "@apidevtools/json-schema-ref-parser": "^9.0.9",
     "@types/node": "^18.15.11",
     "@types/three": "^0.135.0",
+    "@types/uuid": "^10.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^5"
   },
