Set up env var in action to use offscreen QT

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,6 +89,10 @@ jobs:
             yarn=3
             qgis
 
+      - name: Set QT env var
+        shell: bash -l {0}
+        run: echo "QT_QPA_PLATFORM=offscreen" >> $GITHUB_ENV
+
       - name: Checkout
         uses: actions/checkout@v3
 
