Add ruff for linting and formatting

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -218,6 +218,7 @@ jobs:
             python=3.9
             jupyterlab=4
             yarn=3
+            ruff
 
       - name: Lint
         shell: bash -l {0}
@@ -225,6 +226,8 @@ jobs:
           jlpm install
           jlpm run eslint:check
           jlpm run prettier:check
+          ruff check --output-format=github .
+          ruff lint --output-format=github .
 
   check_links:
     name: Check Links
