--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,13 @@ before-build-npm = [
 
 [tool.check-wheel-contents]
 ignore = ["W002"]
+
+[tool.ruff]
+extend-include = ["*.ipynb"]
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+]
+ignore = ["E501", "E731"]
