Build the lite deployment even if integration tests don't pass

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -237,7 +237,7 @@ jobs:
 
   build-lite:
     name: Build JupyterLite
-    needs: integration-tests
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
