Add ruff for linting and formatting (#151)
* Add ruff for linting and formatting

* Fix

* Ruff pre commit

--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -2,7 +2,8 @@
 datamodel-code-generator>=0.23.0
 hatchling>=1.5.0,<2
 jupyterlab>=4,<5
-pydantic==2.4.2
-pillow>=10
 mercantile>=1.2
+pillow>=10
+pydantic==2.4.2
+ruff>=0.6
 xyzservices>=2024.6.0
