Add a file menu option to export to QGIS

--- a/python/jupytergis_qgis/package.json
+++ b/python/jupytergis_qgis/package.json
@@ -15,6 +15,7 @@
   "author": "JupyterGIS contributors",
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
+    "schema/*.json",
     "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
   ],
   "main": "lib/index.js",
@@ -99,6 +100,7 @@
       }
     },
     "extension": true,
+    "schemaDir": "schema",
     "outputDir": "jupytergis_qgis/labextension",
     "sharedPackages": {
       "@jupytergis/base": {
