Use appsharing for testing jupyterlite from PRs and galata reports

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -194,6 +194,7 @@ jobs:
         run: npx playwright test --retries=2
 
       - name: Upload Playwright Test report
+        id: upload-galata-artifact
         if: always()
         uses: actions/upload-artifact@v3
         with:
@@ -201,6 +202,13 @@ jobs:
           path: |
             ui-tests/test-results
             ui-tests/playwright-report
+
+      - name: Save artifact data
+        if: always()
+        uses: trungleduc/appsharingspace-pr-comment/.github/actions/save-artifact-link@v2
+        with:
+          output_name: galata-apss
+          artifact_link: 'https://github.com/${{ github.repository }}/actions/runs/${{github.run_id}}/artifacts/${{ steps.upload-galata-artifact.outputs.artifact-id }}'
 
   check_linting:
     name: Lint check
@@ -276,10 +284,16 @@ jobs:
           jupyter lite build --contents content --output-dir dist
 
       - name: Upload artifact
+        id: upload-jupyterlite-artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./lite/dist
           retention-days: 30
+
+      - name: Save artifact data
+        uses: trungleduc/appsharingspace-pr-comment/.github/actions/save-artifact-link@v2
+        with:
+          artifact_link: 'https://github.com/${{ github.repository }}/actions/runs/${{github.run_id}}/artifacts/${{ steps.upload-jupyterlite-artifact.outputs.artifact_id }}'
 
   deploy:
     needs: build-lite
