--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -2,7 +2,10 @@ name: jupytergis
 channels:
   - conda-forge
 dependencies:
+  - python=3.12
   - pip
   - sphinx
   - pydata-sphinx-theme
   - sphinx-autodoc-typehints
+  - pip:
+      - jupytergis
