--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@jupyterlab/services": " ^7.0.0"
   },
   "devDependencies": {
+    "@types/colormap": "^2.3.4",
+    "@types/proj4": "^2.5.5",
     "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
@@ -76,11 +78,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "latest",
-    "@types/colormap": "^2.3.4",
     "colormap": "^2.3.2",
     "geojson-vt": "^4.0.2",
     "geotiff": "^2.1.3",
     "ol": "^10.1.0",
-    "pmtiles": "^3.0.7"
+    "pmtiles": "^3.0.7",
+    "proj4": "^2.14.0",
+    "proj4-list": "^1.0.2"
   }
 }
