--- a/python/jupytergis_core/pyproject.toml
+++ b/python/jupytergis_core/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-  "jupyter_ydoc>=3,<4",
+  "jupyter-ydoc>=2,<3",
   "jupyter-collaboration>=3,<4",
 ]
 dynamic = ["version", "description", "authors", "urls", "keywords"]
