Update build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -284,19 +284,19 @@ jobs:
         working-directory: docs
         run: |
           set -eux
-          jupyter lite build --contents content --output-dir dist
+          sphinx-build . dist
 
       - name: Upload artifact
-        id: upload-jupyterlite-artifact
+        id: upload-docs-artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./lite/dist
+          path: ./docs/dist
           retention-days: 30
 
       - name: Save artifact data
         uses: trungleduc/appsharingspace-pr-comment/.github/actions/save-artifact-link@v2
         with:
-          artifact_link: 'https://github.com/${{ github.repository }}/actions/runs/${{github.run_id}}/artifacts/${{ steps.upload-jupyterlite-artifact.outputs.artifact_id }}'
+          artifact_link: 'https://github.com/${{ github.repository }}/actions/runs/${{github.run_id}}/artifacts/${{ steps.upload-docs-artifact.outputs.artifact_id }}'
 
   deploy:
     needs: build-docs-and-lite
