--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -39,21 +39,20 @@
   },
   "dependencies": {
     "@deathbeds/jupyterlab-rjsf": "^1.1.0",
-    "@jupyter/docprovider": "^2.0.0",
-    "@jupyter/ydoc": "^1.0.0",
+    "@jupyter/ydoc": "^2.0.0 || ^3.0.0",
     "@jupytergis/schema": "^0.1.6",
-    "@jupyterlab/application": "^4.0.0",
-    "@jupyterlab/apputils": "^4.0.0",
-    "@jupyterlab/completer": "^4.2.4",
-    "@jupyterlab/console": "^4.2.4",
-    "@jupyterlab/coreutils": "^6.0.0",
-    "@jupyterlab/docregistry": "^4.0.0",
-    "@jupyterlab/filebrowser": "^4.0.0",
-    "@jupyterlab/launcher": "^4.0.0",
-    "@jupyterlab/observables": "^5.0.0",
-    "@jupyterlab/services": "^7.0.0",
-    "@jupyterlab/translation": "^4.0.0",
-    "@jupyterlab/ui-components": "^4.0.0",
+    "@jupyterlab/application": "^4.3.0",
+    "@jupyterlab/apputils": "^4.3.0",
+    "@jupyterlab/completer": "^4.3.0",
+    "@jupyterlab/console": "^4.3.0",
+    "@jupyterlab/coreutils": "^6.3.0",
+    "@jupyterlab/docregistry": "^4.3.0",
+    "@jupyterlab/filebrowser": "^4.3.0",
+    "@jupyterlab/launcher": "^4.3.0",
+    "@jupyterlab/observables": "^5.3.0",
+    "@jupyterlab/services": "^7.3.0",
+    "@jupyterlab/translation": "^4.3.0",
+    "@jupyterlab/ui-components": "^4.3.0",
     "@lumino/commands": "^2.0.0",
     "@lumino/coreutils": "^2.0.0",
     "@lumino/messaging": "^2.0.0",
