--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -39,13 +39,13 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.9",
-    "@jupyter/docprovider": "^2.0.0",
-    "@jupyter/ydoc": "^1.0.0",
-    "@jupyterlab/apputils": "^4.0.0",
-    "@jupyterlab/coreutils": "^6.0.0",
-    "@jupyterlab/docregistry": "^4.0.0",
-    "@jupyterlab/services": "^7.0.0",
-    "@jupyterlab/ui-components": "^4.0.0",
+    "@jupyter/collaborative-drive": "^3.0.0",
+    "@jupyter/ydoc": "^2.0.0 || ^3.0.0",
+    "@jupyterlab/apputils": "^4.3.0",
+    "@jupyterlab/coreutils": "^6.3.0",
+    "@jupyterlab/docregistry": "^4.3.0",
+    "@jupyterlab/services": "^7.3.0",
+    "@jupyterlab/ui-components": "^4.3.0",
     "@lumino/coreutils": "^2.0.0",
     "@lumino/signaling": "^2.0.0",
     "ajv": "8.16.0",
