--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "scripts": {
     "build": "lerna run build",
-    "build:prod": "lerna run build:prod",
+    "build:prod": "lerna run build:prod --skip-nx-cache",
     "build:test": "lerna run build:test",
     "build:dev": "lerna run build:dev",
     "bump:js:version": "lerna version --no-push --force-publish --no-git-tag-version --yes",
