--- a/.github/workflows/comment-on-pr.yml
+++ b/.github/workflows/comment-on-pr.yml
@@ -19,6 +19,19 @@ jobs:
       - name: 'Comment APSS link on workflow'
         uses: trungleduc/appsharingspace-pr-comment/.github/actions/pr-comment@v2
         with:
+          comment_prefix: '**Preview using JupyterLite:**'
+          github_token: ${{ secrets.github_token }}
+          index_path: lite/lab/index.html
+  comment-docs-preview:
+    runs-on: ubuntu-latest
+    if: >
+      ${{ github.event.workflow_run.event == 'pull_request' &&
+      github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      - name: 'Comment APSS link on workflow'
+        uses: trungleduc/appsharingspace-pr-comment/.github/actions/pr-comment@v2
+        with:
+          comment_prefix: '**Docs preview:**'
           github_token: ${{ secrets.github_token }}
           index_path: index.html
   comment-galata:
@@ -29,7 +42,7 @@ jobs:
       - name: 'Comment galata link on workflow'
         uses: trungleduc/appsharingspace-pr-comment/.github/actions/pr-comment@v2
         with:
-          comment_prefix: '**Integration tests repot:**'
+          comment_prefix: '**Integration tests report:**'
           artifact_name: galata-apss
           github_token: ${{ secrets.github_token }}
           index_path: playwright-report/index.html
