--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+_output
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -135,3 +136,6 @@ untitled*
 
 # nx cache stuff
 .nx
+
+# GeoJSON schema
+packages/schema/src/schema/geojson.json
