--- a/.github/workflows/pr-rtd-link.yml
+++ b/.github/workflows/pr-rtd-link.yml
@@ -2,7 +2,7 @@
 # interface. For users who don't know this, finding the preview link may be
 # very difficult or frustrating. This workflow makes the link more
 # findable by updating PR descriptions to include it.
-name: "Add ReadTheDocs preview link to PR descriptions"
+name: "Add ReadTheDocs preview link to PR description"
 
 on:
   pull_request_target:
@@ -19,3 +19,6 @@ jobs:
       - uses: "readthedocs/actions/preview@v1"
         with:
           project-slug: "jupytergis"
+          message-template: |
+            📚 Documentation preview: {docs-pr-index-url}
+            💡 JupyterLite preview: {docs-pre-index-url}/lite
